@@ -69,6 +69,13 @@ Fixed:
 - issue2550907 Fix errors when creating documentation. Work done by
   Peter Funk (pefu). (Applied by John Rouillard with small change
   omitting obsolete security.txt.)
+- issue2550826 Capture all exceptions from auditors/reactors and
+  raise a DetectorError instead. This allows failures like IOErrors
+  from the detectors (e.g. unable to access files) to be handled.
+  Previously an IOError just resulted in no output (premature end of
+  headers under apache). Problem diagnosed and initial patch created by
+  Tom Ekberg (tekberg). Further testing and patch change done by
+  John Rouillard.
 
 2016-01-11: 1.5.1
 
